<resources>
    <string name="app_name">Pou Water Hop</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game_play">Pou Water Hop - Running</string>
    <string name="start_button_text">Start</string>
    <string name="pou_image">Pou image</string>
    <string name="current_game_state">Current game state</string>
    <string name="ready_button">Ready</string>
    <string name="game_instructions">Start Pou Water Hop game on second device. Then put current device on top of it so that it would be capable of taking game pictures. Next run the Pou Water Hop game and click the below "Start" button.</string>
    <string name="current_game_state_recognition">Current game state as it is seen by image recognition engine</string>
    <string name="main_activity_label">Pou Water Hop - Get ready</string>
    <string name="action_text_sample">JUMP2</string>
    <string name="game_state_sample">EMPTY_EMPTY</string>
</resources>
